fix nav overlap

--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,16 @@ body {
 }
 
 #map {
+
+
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
 
-    z-index: 900;     /*a larger z-index than the container*/
-    display: block;
+    z-index: -1;     /*a larger z-index than the container*/
+    /*display: block;*/
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: #f5f5f5
